# my_ai_tools

./: .dockerignore  .gitignore  README.md  pyproject.toml
mcps/dynamic_prompt/: .env.example  CLAUDE.md  NEXT.md  README.md  TOOLS.md  pyproject.toml
mcps/dynamic_prompt/infra/: CLAUDE.md  Dockerfile  cloudbuild.yaml  justfile
mcps/dynamic_prompt/infra/terraform/: MEMO.md  OAUTH_FLOW.md  cloud_run.tf  iam.tf  main.tf  outputs.tf  registry.tf  storage.tf  terraform.tfvars.example  variables.tf
mcps/dynamic_prompt/plans/: README.md  phase1-repository-layer.md  phase2-firestore-impl.md  phase3-admin-rest-api.md  phase4-infra-firestore.md  phase5-prod-migration.md  phase6-nextjs-implementation.md  phase7-admin-deploy.md
mcps/dynamic_prompt/src/dynamic_prompt/: config.py  config_source.py  database.py  main.py  models.py  quiz_server.py  session.py  tools.py  validate.py
mcps/dynamic_prompt/src/dynamic_prompt/prompts/: app_config.yaml  instructions.yaml  user_config.yaml
mcps/dynamic_prompt/src/dynamic_prompt/repo/: __init__.py  base.py
mcps/dynamic_prompt/src/dynamic_prompt/static/: quiz.css  quiz.html  quiz.js
mcps/dynamic_prompt/src/dynamic_prompt/tests/: conftest.py  test_config.py  test_config_source.py  (+7 more)
mcps/memo/: .env.example  CLAUDE.md  README.md  TOOLS.md  USECASE.md  pyproject.toml
mcps/memo/claude/: CONVENTIONS.md  FOLDER_STRUCTURE.md  SCHEMA.md  TOOLS.md
mcps/memo/claude/features/: category.md  memo.md  user.md
mcps/memo/plans/: 01-audit-logging.md  02-user-switching.md
mcps/memo/sample_skills/memo-mcp-ambient/: SKILL.md
mcps/memo/sample_skills/memo-mcp-personalize/: SKILL.md
mcps/memo/src/memo/: admin_server.py  auth.py  authz.py  database.py  embedding.py  logging_middleware.py  main.py  service.py  tools.py
mcps/memo/usecase/: 01-knowledge-exploration.md  02-self-learning.md  category.md  login.md  tools.md
(+79 files in other folders)
