[project]
name = "fastmcp_mcps"
version = "0.1.0"
description = "FastMCPで作成したMCPサーバーのまとめ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynamic_prompt"
]

[tool.uv.workspace]
members = ["mcps/dynamic_prompt"]

[tool.uv.sources]
# ワークスペースから解決することを明示
dynamic_prompt = { workspace = true }  
