[project]
name = "memo"
version = "0.1.0"
description = "シンプルなメモ管理MCPサーバー (タイトル・概要のCRUDとタイトル部分一致検索・概要のセマンティック検索)"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
memo = "memo.main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memo"]

[tool.uv]
package = true
